# laboratory_works

./: CMakeLists.txt
lab_003/: laboratory_03.c
lab_003_Binary_Trees/: binary_tree.c
lab_004_Linked_List/: linked_list.c
laboratories/: labolatory_02.c  laboratory_01.c
